--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ body {
   <a href="maps.html">Maps</a>
   <a href="tips.html">Tips & Tricks</a>
 
-  <a href="wiki.html" class="center">Information</a>
+  <a href="wiki.html" class="center">Wiki [Work In Progress]</a>
 </div>
 
 <div class="footer">
@@ -110,6 +110,7 @@ body {
 
 </body>
 </html>
+
 
 
 
