--- a/armor.html
+++ b/armor.html
@@ -1,5 +1,9 @@
 <!-- =========================
-FILE: armor.html
+FILE: armor.html  (REDO)
+- Fixes: broken quotes, wrong ids, duplicate ids, renderPage/renderPage mismatch
+- Uses wirePage like your working pages
+- Adds Buy/Sell placeholders
+- Images hotlink via Special:FilePath (use official filenames)
 ========================= -->
 <!doctype html>
 <html lang="en">
@@ -45,7 +49,7 @@ FILE: armor.html
         <div class="hero">
           <div>
             <h1>Body Armor</h1>
-            <div class="sub">Each type may come in multiple colors or camo styles.</div>
+            <div class="sub">Each type may come in multiple colors/camo styles. Prices optional.</div>
           </div>
           <div class="badge" id="countBadge">0 items</div>
         </div>
@@ -73,24 +77,27 @@ FILE: armor.html
 
   <script src="wiki-shared.js"></script>
   <script>
-    // From your provided official wiki table
-    const DATA = [
-      { name:"Apocalypse Vest", image:"apoc_black.png", tags:["Heavy"], sub:"Hotbar 7 • Max 25kg • Cap 2x8", id:"apocalypse-vest", notes:"Armor 10 / AP 5 • Colors: Black, Blue, Green, Desert", buy:null, sell:"—" },
-      { name:"Banana Suit", image:"banana_suit.jpg", tags:["Full Body"], sub:"Hotbar 4", id:"banana-suit", notes:"(stats N/A)", buy:null, sell:"—" },
-      { name:"Cat Pajama", image:"cat_pajama_pink.png", tags:["Full Body"], sub:"Hotbar 4", id:"cat-pajama", notes:"Colors: Pink (more exist)", buy:null, sell:"—' },
-      { name:"Composite Armor", image:"composite_armor_blue.jpg", tags:["Full Body"], sub:"Hotbar 4", id:"composite-armor", notes:"Armor 18 / AP 0 • Colors: Blue, Yellow", buy:null, sell:"—" },
-      { name:"Dinosaur Pajama", image:"dinosaur_pajama_brown.jpg", tags:["Full Body"], sub:"Hotbar 4",  id:"dinosaur-pajama",notes:"Colors: Brown (more exist)", buy:null, sell:"—" },
-      { name:"Heavy Vest", image:"heavy_green.png", tags:["Heavy"], sub:"Hotbar 7 • Max 25kg • Cap 2x8", id:"heavy-vest", notes:"Armor 10 / AP 5 • Colors: Flat Green, Jungle, Desert, Snowy", buy:null, sell:"—" },
-      { name:"Hot Dog Suit", image:"hot_dog_suit_new.jpg", tags:["Full Body"], sub:"Hotbar 4", id:"hot-dog-suit", notes:"2 variants: New, Damaged", buy:null, sell:"—" },
-      { name:"Karuta Armor", image:"karuta_armor_yellow.jpg", tags:["Full Body"], sub:"Hotbar 4", id:"karurta-armor", notes:"Armor 18 / AP 0 • Colors: Red, Green, Yellow, Blue", buy:null, sell:"—" },
-      { name:"Karuta Armor (Samurai)", image:"karuta_armor_samurai.jpg", tags:["Full Body"], sub:"Hotbar 4", id:"karuta-armor",notes:"Armor 18 / AP 0", buy:null, sell:"—" },
-      { name:"Light Vest", image:"light_green.png", tags:["Light"], sub:"Hotbar 4", id:"light-vest",  notes:"Armor 4 / AP 0 • Colors: Flat Green, Jungle, Desert, Snowy", buy:null, sell:"—" },
-      { name:"Medium Vest", image:"medium_green.png", tags:["Medium"], sub:"Hotbar 5 • Max 10kg • Cap 1x8", id:"medium-vest", notes:"Armor 7 / AP 2 • Colors: Flat Green, Jungle, Desert, Snowy", buy:null, sell:"—" },
-      { name:"Metal Armor", image:"Metal_Armor.png", tags:["Light"], sub:"Hotbar 4", id:"light-vest",notes:"Armor 15 / AP 5 • Colors: Grey, Silver, White, Green, Red", buy:null, sell:"—" },
-      { name:"Press Vest", image:"press_vest.jpg", tags:["Medium"], sub:"Hotbar 5 • Max 12.5kg • Cap 1x8+4", id:"press-vest",notes:"Armor 7 / AP 2", buy:null, sell:"—" },
-      { name:"SWAT Vest", image:"Swat.png", tags:["Medium"], sub:"Hotbar 6 • Max 15kg • Cap 2x8", id:"light-vest",notes:"Armor 7 / AP 3", buy:null, sell:"—" },
-      { name:"Tech Armor", image:"tech_armor_white.jpg", tags:["Full Body"], sub:"Hotbar 4", id:"tech-armo",notes:"Armor 18 / AP 0 • Colors: Blue, Black, Red, White", buy:null, sell:"—" },
-      { name:"Tiger Pajama", image:"tiger_pajama_orange.jpg", tags:["Full Body"], sub:"Hotbar 4", id:"tiger-paja",notes:"Colors: Green, Orange", buy:null, sell:"—" }
+    // NOTE: These image filenames MUST match the official wiki file names.
+    // If an image doesn’t load, the filename is wrong on the official wiki.
+    // Replace the `image:` value with the correct filename from deadpoly.wiki.
+
+    const items = [
+      { name:"Apocalypse Vest", image:"apoc_black.png", tags:["Heavy"], id:"apocalypse-vest", notes:"Hotbar 7 • Max 25kg • Cap 2×8 • Armor 10 / AP 5 • Colors: Black, Blue, Green, Desert", buy:"—", sell:"—" },
+      { name:"Banana Suit", image:"banana_suit.jpg", tags:["Full Body"], id:"banana-suit", notes:"Hotbar 4 • (stats N/A)", buy:"—", sell:"—" },
+      { name:"Cat Pajama", image:"cat_pajama_pink.png", tags:["Full Body"], id:"cat-pajama", notes:"Hotbar 4 • Colors: Pink (more exist)", buy:"—", sell:"—" },
+      { name:"Composite Armor", image:"composite_armor_blue.jpg", tags:["Full Body"], id:"composite-armor", notes:"Hotbar 4 • Armor 18 / AP 0 • Colors: Blue, Yellow", buy:"—", sell:"—" },
+      { name:"Dinosaur Pajama", image:"dinosaur_pajama_brown.jpg", tags:["Full Body"], id:"dinosaur-pajama", notes:"Hotbar 4 • Colors: Brown (more exist)", buy:"—", sell:"—" },
+      { name:"Heavy Vest", image:"heavy_green.png", tags:["Heavy"], id:"heavy-vest", notes:"Hotbar 7 • Max 25kg • Cap 2×8 • Armor 10 / AP 5 • Colors: Flat Green, Jungle, Desert, Snowy", buy:"—", sell:"—" },
+      { name:"Hot Dog Suit", image:"hot_dog_suit_new.jpg", tags:["Full Body"], id:"hot-dog-suit", notes:"Hotbar 4 • 2 variants: New, Damaged", buy:"—", sell:"—" },
+      { name:"Karuta Armor", image:"karuta_armor_yellow.jpg", tags:["Full Body"], id:"karuta-armor", notes:"Hotbar 4 • Armor 18 / AP 0 • Colors: Red, Green, Yellow, Blue", buy:"—", sell:"—" },
+      { name:"Karuta Armor (Samurai)", image:"karuta_armor_samurai.jpg", tags:["Full Body"], id:"karuta-armor-samurai", notes:"Hotbar 4 • Armor 18 / AP 0", buy:"—", sell:"—" },
+      { name:"Light Vest", image:"light_green.png", tags:["Light"], id:"light-vest", notes:"Hotbar 4 • Armor 4 / AP 0 • Colors: Flat Green, Jungle, Desert, Snowy", buy:"—", sell:"—" },
+      { name:"Medium Vest", image:"medium_green.png", tags:["Medium"], id:"medium-vest", notes:"Hotbar 5 • Max 10kg • Cap 1×8 • Armor 7 / AP 2 • Colors: Flat Green, Jungle, Desert, Snowy", buy:"—", sell:"—" },
+      { name:"Metal Armor", image:"Metal_Armor.png", tags:["Light"], id:"metal-armor", notes:"Hotbar 4 • Armor 15 / AP 5 • Colors: Grey, Silver, White, Green, Red", buy:"—", sell:"—" },
+      { name:"Press Vest", image:"press_vest.jpg", tags:["Medium"], id:"press-vest", notes:"Hotbar 5 • Max 12.5kg • Cap 1×8+4 • Armor 7 / AP 2", buy:"—", sell:"—" },
+      { name:"SWAT Vest", image:"Swat.png", tags:["Medium"], id:"swat-vest", notes:"Hotbar 6 • Max 15kg • Cap 2×8 • Armor 7 / AP 3", buy:"—", sell:"—" },
+      { name:"Tech Armor", image:"tech_armor_white.jpg", tags:["Full Body"], id:"tech-armor", notes:"Hotbar 4 • Armor 18 / AP 0 • Colors: Blue, Black, Red, White", buy:"—", sell:"—" },
+      { name:"Tiger Pajama", image:"tiger_pajama_orange.jpg", tags:["Full Body"], id:"tiger-pajama", notes:"Hotbar 4 • Colors: Green, Orange", buy:"—", sell:"—" }
     ];
 
     const columns = [
@@ -101,7 +108,13 @@ FILE: armor.html
       { key:"sell", label:"Sell" }
     ];
 
-    renderPage({ title:"Armor", data:DATA, columns:COLUMNS, defaultView:"cards" });
+    wirePage({
+      title:"Armor",
+      items,
+      columns,
+      activeHref:"armor.html",
+      placeholderText:"Search armor..."
+    });
   </script>
 </body>
 </html>
